<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_commande"
            android:icon="@drawable/icons8_restaurant_menu"
            android:title="@string/commande"
            android:visible="true"/>
        <item
            android:id="@+id/nav_facture"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/facture"
            android:visible="true"/>
        <item
            android:id="@+id/nav_message"
            android:icon="@android:drawable/ic_dialog_email"
            android:title="@string/message" />

    </group>

    <item android:title="@string/menudujour">
        <menu>
            <item
            android:id="@+id/nav_platsdujour"
            android:icon="@drawable/ic_room_service_black_24dp"
            android:title="@string/platsdujour" />
            <item
                android:id="@+id/nav_viennoiseries"
                android:icon="@drawable/icons8_cupcake"
                android:title="@string/viennoiseries" />
            <item
                android:id="@+id/nav_menu"
                android:icon="@drawable/ic_restaurant_menu_black_24dp"
                android:title="@string/menu" />
        </menu>
    </item>
    <item android:title="@string/autres">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_action_settings"
                android:title="@string/action_settings" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit_to_app_black_36dp"
                android:title="@string/action_logout"/>
        </menu>
    </item>

</menu>
