<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.sadicomputing.foodordering.activity.serveur.ServeurResumeCommandeActivity"
    tools:showIn="@layout/activity_serveur_resume_commande">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pasdecommande"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/pasdecommande"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@android:color/darker_gray"
                android:visibility="gone"
                />
            <android.support.v4.widget.SwipeRefreshLayout
                android:id="@+id/swipeRefreshLayoutPlatsdujour"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/reclycerViewPlatsdujour"
                    />
            </android.support.v4.widget.SwipeRefreshLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                android:gravity="center">
                <TextView
                    android:id="@+id/total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:gravity="start"
                    android:text="@string/total"
                    android:textColor="@color/colorAccent"
                    android:textAllCaps="false"/>
                <TextView
                    android:id="@+id/prixtotal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:gravity="end"
                    android:paddingRight="10dp"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:textStyle="bold"
                    android:text="@string/prixtotal"
                    android:textColor="@android:color/black"
                    android:textAllCaps="false"/>
            </LinearLayout>
            <Button
                android:id="@+id/passerlacommande"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:background="@drawable/custombutton"
                android:text="@string/passerlacommande"
                android:textColor="@android:color/white" />
        </LinearLayout>
</LinearLayout>
