<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.sadic.formationandroid.activities.MainActivity">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:src="@drawable/zuulu_logo"
                    android:layout_gravity="center"
                    android:layout_marginBottom="30dp"
                    android:layout_marginTop="80dp"
                    android:background="@android:color/white"
                    android:contentDescription="@string/logo"/>

                <EditText
                    android:id="@+id/login"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/customedittext"
                    android:hint="@string/hint_email"
                    android:inputType="text"
                    android:padding="10dp"
                    android:maxLines="1"
                    android:drawablePadding="10dp"
                    android:drawableLeft="@drawable/ic_action_login"
                    android:drawableStart="@drawable/ic_action_login"/>

                <!-- Login Button -->

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custombutton"
                    android:text="@string/btn_login"
                    android:textColor="@android:color/white" />

            </LinearLayout>
        </ScrollView>
</android.support.v4.widget.NestedScrollView>
