<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:background="#e7787878">
    <com.github.siyamed.shapeimageview.CircularImageView
        android:id="@+id/imagecommande"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:padding="10dp"
        android:layout_gravity="center"
        app:siBorderAlpha="0.0"
        android:contentDescription="@string/action_more"/>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_gravity="center">
        <TextView
            android:id="@+id/commande"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/menu"
            android:textColor="@android:color/white"
            android:textAllCaps="false"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/table"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:text="@string/platsdujour"
                android:textColor="@android:color/white"
                android:textAllCaps="false"/>
            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:gravity="end"
                android:text="@string/platsdujour"
                android:textColor="@android:color/white"
                android:textAllCaps="false"/>
        </LinearLayout>
    </LinearLayout>
    <ImageView
        android:id="@+id/imageaddcommande"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_action_add"
        android:layout_gravity="end|center"
        android:clickable="true"
        android:layout_margin="10dp"
        android:contentDescription="@string/action_more"
        android:visibility="visible"/>
    <ImageView
        android:id="@+id/imagesendcomptable"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_menu_send"
        android:layout_gravity="end|center"
        android:clickable="true"
        android:layout_margin="10dp"
        android:contentDescription="@string/action_more"
        android:visibility="visible"/>
</LinearLayout>