<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
        <android.support.v7.widget.CardView
            android:id="@+id/platsdujour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:background="#96ffffff">
                    <ImageView
                        android:id="@+id/plus"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_action_plus"
                        android:layout_gravity="center"
                        android:clickable="true"
                        android:layout_margin="4dp"
                        android:background="@android:color/holo_blue_dark"
                        android:contentDescription="@string/action_more"/>
                    <TextView
                        android:id="@+id/quantite"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:text="@string/quantite"
                        android:gravity="center"
                        android:maxLines="1"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"
                        android:background="#96ffffff"
                        android:textColor="@android:color/black"/>
                    <ImageView
                        android:id="@+id/moins"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_action_moins"
                        android:layout_gravity="center"
                        android:clickable="true"
                        android:layout_margin="4dp"
                        android:background="@android:color/holo_blue_dark"
                        android:contentDescription="@string/action_more"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:gravity="start|center">
                    <TextView
                        android:id="@+id/articlecommande"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start|center"
                        android:textStyle="bold"
                        android:textSize="25sp"
                        android:text="@string/articlecommande"
                        android:textColor="@color/colorAccent"
                        android:textAllCaps="false"/>
                    <TextView
                        android:id="@+id/prixarticlecommande"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="25sp"
                        android:gravity="start"
                        android:text="@string/prixarticle"
                        android:textColor="@android:color/black"
                        android:textAllCaps="false"/>
                </LinearLayout>
                <ImageView
                    android:id="@+id/deletearticlecommande"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_action_delete"
                    android:layout_gravity="end|center"
                    android:clickable="true"
                    android:contentDescription="@string/action_more"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
</LinearLayout>